Fixed spacing on about text

--- a/CSS&Assets/main.css
+++ b/CSS&Assets/main.css
@@ -255,6 +255,7 @@ section#contact h1{
     #about-inner{
         padding-left: 80px;
         max-width: 90%;
+        height: 200px;
     }
 
     section.module.content {
